syntax = "proto3";

package org.vl4ds4m.banking;

option java_multiple_files = true;
option java_package = "org.vl4ds4m.banking.converter.grpc";
option java_outer_classname = "ConverterProto";

service Converter {
  rpc Convert (ConverterGrpcRequest) returns (ConverterGrpcResponse) {
  }
}

message ConverterGrpcRequest {
  string from = 1;
  string to = 2;
  double amount = 3;
}

message ConverterGrpcResponse {
  string currency = 1;
  double amount = 2;
}